# qalc

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  mcp-publish.yml
docker/: Dockerfile.mcp
notebooks/: backtest_report.ipynb  optimise_strategy.ipynb
qalc/: main.py
qalc/llm/: __init__.py  llm_init.py
qalc/llm/agents/: __init__.py  base_agent.py  strategy_optimiser.py
qalc/llm/prompts/: __init__.py  get_prompt.py
qalc/llm/prompts/templates/: backtest_summary.yaml  strategy_optimiser.yaml
qalc/mcp/: __init__.py  main.py
qalc/mcp/tools/: __init__.py  get_historical_data.py  run_backtest.py
qalc/platform/market_data/: __init__.py  timeframe.py  types.py
qalc/platform/market_data/providers/: __init__.py  _base_data_provider.py  _data_provider_factory.py  alpaca_data_api.py  get_data_provider.py
qalc/providers/: _base_provider.py  alpaca_trading_api.py
qalc/strategies/: __init__.py  _base_strategy.py  _strategy_factory.py  base_strategy.py  buy_and_hold.py  get_data_provider.py  rsi_trailing_stop.py
