[tool.poetry]
name = "qalc"
version = "0.1.0"
description = ""
authors = ["Tim Jones <devsectim@pm.me>"]
readme = "README.md"
packages = [
    { include = "qalc" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
ta = "^0.11.0"
alpaca-py = "^0.40.2"
python-dotenv = "^1.1.1"

[tool.poetry.scripts]
qalc = "qalc.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
