[project]
name = "qalc"
version = "0.1.0"
description = "Algo-trading and backtesting framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.42.0",
    "fastmcp>=2.10.6",
    "langchain>=0.3.27",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "pandas>=2.3.1",
    "ta>=0.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "qalc"}

[tool.setuptools.packages.find]
where = ["qalc"]
